--- a/app/static/css/layout.css
+++ b/app/static/css/layout.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0 auto;
+  margin: 0px auto;
   font-family: "Futura", "Helvetica", sans-serif;
   line-height: 1.5em;
   color: #3c3836;
@@ -7,10 +7,11 @@ body {
 
 h1 {
   font-size: 3em;
+  line-height: 1em;
 }
 
 h1, h2, h3 {
-  margin-top: 2em;
+  margin-top: 2vh;
   color: #1d2021;
 }
 
@@ -19,7 +20,6 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
-  max-width: none; 
   text-align: center;
 }
 
@@ -29,7 +29,6 @@ header nav{
   background-color: #1d2021;
   opacity: 0.5;
   justify-content: space-between;
-  padding: 1vw 10em;
   transition: opacity 1s;
 }
 
@@ -43,10 +42,12 @@ header nav:hover {
   text-decoration: none;
   text-align: center;
   font-size: 1em;
+  padding: 3vh 5vw;
 }
 
 .nav-item:hover {
   color: #bac0cd;
+  background-color: black;
 }
 
 
@@ -56,7 +57,8 @@ header div {
 
 main {
   margin: 0 auto;
-  max-width: 50em;
+  max-width: 70vw;
+  padding: 5vh 10px; 
 }
 
 
